src/test/testFiles/valid/stackConstructor.manimdsl
let x = new Stack<number>() {1, 2, 3};
let y = new Stack<number>();
