src/test/testFiles/invalid/semanticErrors/ifStatementsBranchesMustAllHaveReturns2.manimdsl
fun get(x: number, stack: Stack<number>): number {
    if(x > 3) {
        stack.push(3);
        return 4;
    } else {
        stack.push(5);
    }
}

let stack = new Stack<number>;
get(4, stack);